--- a/bundles/plugin/pom.xml
+++ b/bundles/plugin/pom.xml
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>com.blackducksoftware.integration</groupId>
       <artifactId>hub-common</artifactId>
-      <version>2.0.1-SNAPSHOT</version>
+      <version>2.1.0</version>
     </dependency>
     <dependency>
       <groupId>com.blackducksoftware.integration</groupId>
@@ -36,7 +36,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <version>2.10</version>
-        <!--$NO-MVN-MAN-VER$-->
         <executions>
           <execution>
             <id>unpack</id>
@@ -56,7 +55,7 @@
                 <artifactItem>
                   <groupId>com.blackducksoftware.integration</groupId>
                   <artifactId>hub-common</artifactId>
-                  <version>2.0.1-SNAPSHOT</version>
+                  <version>2.1.0</version>
                   <type>jar</type>
                   <outputDirectory>${output-dir}</outputDirectory>
                 </artifactItem>
