attempting to fix pictures

--- a/bundles/plugin/build.properties
+++ b/bundles/plugin/build.properties
@@ -4,7 +4,8 @@ output.. = target/dependencies
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               lib/
+               lib/,\
+               resources/
 jars.compile.order = .,\
                      lib/
 source.lib/ = target/dependencies/
